force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <description>Items that were expensed during travel</description>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Expense Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>